tests/lex-fail/string_eof.fl.0.exp
Error: string_eof.fl(1,1): Unexpected end of input in string literal 
"
^ 
